# sky_day_47

./: pyproject.toml
code/: create_table.sql  main.py
